change to a Go implementation

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,10 +1,8 @@
 services:
-  telegram-hermes:
-    build:
-      context: .
-      dockerfile: Dockerfile
+  telegram_app:
+    build: .
     ports:
-      - '10000:10000'
+      - "10000:10000"
     env_file:
       - .env
     restart: unless-stopped
